fix z-index'es for sticky containers

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 
   padding: 16px 70px;
   max-height: 70px;
