--- a/src/components/Main/AboutMe/AboutMe.scss
+++ b/src/components/Main/AboutMe/AboutMe.scss
@@ -34,7 +34,6 @@
   flex-direction: column;
   gap: 26px;
   max-width: 600px;
-  z-index: -1;
 }
 
 .aboutme__heading {
